# tron

./: .gitignore  .travis.yml  CMakeLists.txt  Computer.cpp  Computer.h  Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  README.md  User.cpp  User.h  a.out  main.cpp  stdafx.h
sources/: CMakeLists.txt  Colors.h  Computer.cpp  Computer.h  Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  User.cpp  User.h  main.cpp  stdafx.h
sources/TronCLI/: CMakeLists.txt  Computer.cpp  Computer.h  Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  User.h  main.cpp  stdafx.h
sources/TronCore/: GameAPI.h
sources/TronGUI/: CMakeLists.txt  Computer.cpp  Computer.h  GameWindow.cpp  GameWindow.h  GraphicFrame.cpp  GraphicFrame.h  MenuWindow.cpp  MenuWindow.h  Player.cpp  Player.h  User.cpp  User.h  main.cpp
sources/TronGUI/resources/: resources.qrc
